# project-k-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  authz.yaml  docker-compose.yml  dpdp_config.yaml  identity.yaml  pyproject.toml  tenancy.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
brand/: __main__.py  brand.py  brand.yaml  deploy_backoffice_app.py  deploy_to_frappe.py  generate_css.py  generate_hooks.py  render_docs.py
brand/backoffice_app/: MANIFEST.in  setup.py
brand/frappe/: head_fonts.html  hooks_example.py
deploy/: dpdp-cutover.yaml
docs/: admin-console-contract.md  anchor-portal-design.md  api-contract-v1.yaml  auth-architecture.md  borrower-ciam-contract.md  dpdp-implementation-note.md  frappe-crm-loan-management-spec.md  rbac-role-uis-implementation-note.md  ui-implementation-status.md  user-guide-by-role.md  userguide.md
docs/adr/: 001-ip-boundary.md  002-decision-engine.md  003-audit-stamp.md
docs/guides/: PHASE-0-TASKS.md
docs/templates/: ui-implementation-status.md.tmpl  user-guide-by-role.md.tmpl
infra/deploy/: nginx.conf  ocen-gateway.service  ocen-pwa.service  ocen-worker.service  setup.sh
infra/docker/: keycloak-realm.json  temporal-dynamic-config.yaml
infra/terraform/: .gitignore  README.md  iam.tf  network.tf  outputs.tf  rke2.tf  security.tf  variables.tf  versions.tf
libs/aa_client/: __init__.py
libs/audit/: __init__.py  receipts.py
libs/auth/: __init__.py  factory.py  protocols.py  types.py
libs/common/: __init__.py  event_producer.py  events.py  logging.py  middleware.py  models.py  rate_limit.py  service_auth.py  tracing.py  webhook_auth.py
libs/db/: __init__.py  data_source.py  engine.py  models.py  retention_handlers.py  rls.py
libs/integrations/: __init__.py  factory.py  protocols.py
libs/mocks/: __init__.py  aa_client.py  gst_client.py  lender_client.py  ocen_client.py
libs/ocen_client/: __init__.py  heartbeat.py  network_client.py  registry.py
libs/zen_rules/: __init__.py  engine.py
migrations/: env.py
migrations/deferred/: README.md
migrations/versions/: 001_initial_schema.py  002_add_encrypted_pii_columns.py  (+4 more)
rules/: d0-kind1-gate.json  d1-data-sufficiency.json  d2-derived-flags.json  d3-lender-prescreen.json
sandbox/: __init__.py  config.py  pyproject.toml
sandbox/clients/: __init__.py  aa_client.py  consent_client.py  dsr_client.py  gst_client.py  lender_client.py  ocen_client.py
sandbox/scenarios/: loader.py  registry.yaml
schemas/: trade-event.schema.json
scripts/: create-topics.sh  init-db.sql  register-schemas.sh  schedule_retention_cron.py
tests/: conftest.py  test_audit_trail.py  test_auth_protocols.py  test_backoffice_sync.py  test_borrower_gateway.py  test_borrower_ownership.py  test_brand.py  test_config_consistency.py  test_ddp_engine.py  test_dpdp_integration.py  test_dpdp_scenarios.py  test_event_producer.py  test_frappe_sync.py  test_integration_e2e.py  test_kind1_event_forwarding.py  test_logging.py  test_mocks.py  test_ops_api.py  test_rbac_hardening.py  test_rls.py  test_sandbox_clients.py  test_service_auth.py  test_smoke.py  test_trust_graph.py  test_udyam.py  test_vdp_api.py  test_vdp_wedge.py  test_workflow.py  test_workflow_integration.py  test_zen_engine.py
(+66 files in other folders)
