[project]
name = "ocen-platform"
version = "0.1.0"
description = "OCEN 4.0 Loan Agent & Derived Data Provider — Anchor-led vendor receivables financing"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4",
    "httpx>=0.27",
    "orjson>=3.10",

    # DPDP compliance (PII redaction, consent, encryption, audit)
    "dpdp-core",

    # Sandbox mock clients (separate repo)
    "ocen-sandbox",


    # Event bus (Kafka-compatible)
    "confluent-kafka>=2.6",

    # Database
    "sqlalchemy>=2.0,<3",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",

    # Temporal
    "temporalio>=1.8",

    # Decision engine (GoRules Zen)
    "zen-engine>=0.27",

    # API framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",

    # dbt (Trust Graph)
    "dbt-core>=1.9",
    "dbt-postgres>=1.9",

    # Crypto / signing
    "cryptography>=44.0",
    "PyJWT>=2.9",

    # Utilities
    "tenacity>=9.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-python-dateutil",
    "httpx",  # for TestClient
    "testcontainers>=4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs", "services"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["project-k-platform-source", ".venv"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",          # pyflakes
    "I",          # isort
    "N",          # pep8-naming
    "UP",         # pyupgrade
    "B",          # bugbear
    "SIM",        # simplify
    "TCH",        # type-checking
    "RUF",        # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["libs", "services"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests requiring running infrastructure (docker compose)",
]
asyncio_mode = "auto"

[tool.uv.sources]
dpdp-core = { git = "https://github.com/shreyashnadage/project-k-dpdp-core.git", branch = "master" }
ocen-sandbox = { git = "https://github.com/shreyashnadage/project-k-sandbox.git", branch = "master" }
