# Sandbox package metadata — for future extraction to project-k-dpdp-sandbox repo.
# Currently consumed as a local package within the platform monorepo.

[project]
name = "dpdp-sandbox"
version = "0.1.0"
description = "DPDP compliance sandbox with YAML-driven scenario testing"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
